<resources>
    <string name="app_name">MMB</string>
    <string name="update_status">Update Status</string>
    <string name="UpdateBtn">Post</string>
    <string name="edit_text_hint">Enter Status less than 140 chars</string>

    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="status">Status</string>
    <string name="refresh">Refresh</string>
    <string name="user_name">UserName</string>
    <string name="user_name_summary">Enter Username</string>
    <string name="password_summary">Enter Password</string>
    <string name="password">Password</string>
    <string name="cb_showpassword">Show Password</string>
    <string name="cb_summary">Show Password or not</string>
    <string name="server_summary">Enter Server</string>
    <string name="server">Server</string>
    <string name="preference">Preference</string>
    <string name="action_settings">Settings</string>

    <string name="username_default">student</string>
    <string name="password_default">password</string>
    <string name="server_default">"http://yamba.newcircle.com/api"</string>
    <integer name="delay_default">5</integer>

    <string name="username_pref_key">username</string>
    <string name="password_pref_key">password</string>
    <string name="server_pref_key">server</string>
    <string name="delay_pref_key">delay</string>
    <string name="timeline">TimeLine</string>
    <string-array name="delayName">
        <item>Every 15 Seconds</item>
        <item>Every 15 Minute</item>
        <item>Every half hour</item>
        <item>Every half day</item>
        <item>Once a day</item>
    </string-array>
    <string-array name="delayValue">
        <item>15</item>
        <item>900</item>
        <item>1800</item>
        <item>43200</item>
        <item>86400</item>
    </string-array>
    <string name="delayTitle">Delay Time</string>
    <string name="delaySummary">Total Time before refresh</string>
    <string name="delay_default">5</string>
    <string name="title_activity_time_line">TimeLineActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
