<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StatusActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ff6ca8e3"
    >
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/update_status"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="140"
        android:textSize="15sp" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ee21"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etInput"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="80dp"
            android:gravity="top"
            android:hint="@string/edit_text_hint"
            android:inputType="textMultiLine"
            android:textColorHint="#fff" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/UpdateBtn"
            />
    </LinearLayout>
</LinearLayout>
